[package]
name = "test-async"
version = "0.1.0"
authors = ["Tomas Chabada <tchabada@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
tonic = { version = "0.1.0-beta.1" }
async-stream = "0.2"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
prost-types = "0.5"
http = "0.2"
tower = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.9"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.1.0-beta.1"
