[package]
name = "test-async"
version = "0.1.0"
authors = ["Tomas Chabada <tchabada@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
tonic = { version = "0.2" }
bb8 = "0.4"
bb8-postgres = "0.4"
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
console = "0.10"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.2"
