[package]
name = "test-grpc"
version = "0.1.0"
authors = ["Tomas Chabada <tchabada@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
tonic = { version = "0.2" }
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
console = "0.11"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"
