[package]
name = "test-winapi"
version = "0.1.0"
authors = ["Tomas Chabada <tchabada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "winerror",
    "winnt",
    "winuser",
    "handleapi",
    "fileapi",
    "setupapi",
    "hidclass",
    "hidsdi",
    # "usbiodef",
] }
anyhow = "1.0"
